# live-talk

./: .gitignore  README.md  pyproject.toml
live_talk/: connection_manager.py  dependency.py  main.py  transcribe.py
public/: index.html
